--- a/web/i18n/ko-KR/app-api.json
+++ b/web/i18n/ko-KR/app-api.json
@@ -39,7 +39,7 @@
   "chatMode.streaming": "스트리밍 반환. SSE(Server-Sent Events) 를 기반으로 하는 스트리밍 반환 구현.",
   "chatMode.title": "채팅 모드 API",
   "completionMode.blocking": "블로킹 유형으로 실행이 완료되고 결과가 반환될 때까지 대기합니다. (처리가 오래 걸리면 요청이 중단될 수 있습니다)",
-  "completionMode.createCompletionApi": "완성 메시지 생성",
+  "completionMode.createCompletionApi": "완료 메시지 생성",
   "completionMode.createCompletionApiTip": "질의 응답 모드를 지원하기 위해 완성 메시지를 생성합니다.",
   "completionMode.info": "문서, 요약, 번역 등 고품질 텍스트 생성을 위해 사용자 입력을 사용하는 완성 메시지 API 를 사용합니다. 텍스트 생성은 Dify Prompt Engineering 에서 설정한 모델 매개변수와 프롬프트 템플릿에 의존합니다.",
   "completionMode.inputsTips": "(선택 사항) Prompt Eng 의 변수에 해당하는 키 - 값 쌍으로 사용자 입력 필드를 제공합니다. 키는 변수 이름이고 값은 매개변수 값입니다. 필드 유형이 Select 인 경우 전송되는 값은 미리 설정된 선택 사항 중 하나여야 합니다.",
@@ -51,7 +51,7 @@
   "completionMode.queryTips": "사용자 입력 텍스트 내용.",
   "completionMode.ratingTip": "좋아요 또는 좋아요, null 은 취소",
   "completionMode.streaming": "스트리밍 반환. SSE(Server-Sent Events) 를 기반으로 하는 스트리밍 반환 구현.",
-  "completionMode.title": "완성 모드 API",
+  "completionMode.title": "완료 모드 API",
   "copied": "복사 완료",
   "copy": "복사",
   "develop.noContent": "내용 없음",
