--- a/web/i18n/ko-KR/app-debug.json
+++ b/web/i18n/ko-KR/app-debug.json
@@ -22,10 +22,10 @@
   "autoAddVar": "프리프롬프트에서 참조되는 미정의 변수가 있습니다. 사용자 입력 양식에 추가하시겠습니까?",
   "chatSubTitle": "단계",
   "code.instruction": "지침",
-  "codegen.apply": "적용하다",
+  "codegen.apply": "적용",
   "codegen.applyChanges": "변경 사항 적용",
   "codegen.description": "코드 생성기는 구성된 모델을 사용하여 지시에 따라 고품질 코드를 생성합니다. 명확하고 자세한 지침을 제공하십시오.",
-  "codegen.generate": "창조하다",
+  "codegen.generate": "생성",
   "codegen.generatedCodeTitle": "생성된 코드",
   "codegen.instruction": "지시",
   "codegen.instructionPlaceholder": "생성하려는 코드에 대한 자세한 설명을 입력합니다.",
@@ -179,11 +179,11 @@
   "feature.tools.toolsInUse": "{{count}}개의 도구가 사용 중",
   "formattingChangedText": "포맷을 변경하면 디버그 영역이 재설정됩니다. 계속하시겠습니까?",
   "formattingChangedTitle": "포맷이 변경되었습니다",
-  "generate.apply": "적용하다",
+  "generate.apply": "적용",
   "generate.codeGenInstructionPlaceHolderLine": "입력 및 출력의 데이터 유형과 변수 처리 방법과 같은 피드백이 더 상세할수록 코드 생성이 더 정확해질 것입니다.",
   "generate.description": "프롬프트 생성기는 구성된 모델을 사용하여 더 높은 품질과 더 나은 구조를 위해 프롬프트를 최적화합니다. 명확하고 상세한 지침을 작성하십시오.",
   "generate.dismiss": "해제",
-  "generate.generate": "창조하다",
+  "generate.generate": "생성",
   "generate.idealOutput": "이상적인 출력",
   "generate.idealOutputPlaceholder": "당신의 이상적인 응답 형식, 길이, 톤 및 내용 요구 사항을 설명하십시오...",
   "generate.insertContext": "문맥을 삽입하세요.",
@@ -236,7 +236,7 @@
   "inputs.title": "디버그 및 미리보기",
   "inputs.userInputField": "사용자 입력 필드",
   "modelConfig.modeType.chat": "채팅",
-  "modelConfig.modeType.completion": "완성",
+  "modelConfig.modeType.completion": "완료",
   "modelConfig.model": "모델",
   "modelConfig.setTone": "응답 톤 설정",
   "modelConfig.title": "모델 및 매개변수",
