--- a/web/i18n/ko-KR/app.json
+++ b/web/i18n/ko-KR/app.json
@@ -12,7 +12,7 @@
   "accessControlDialog.members_other": "{{count}} 회원",
   "accessControlDialog.noGroupsOrMembers": "선택된 그룹 또는 멤버가 없습니다.",
   "accessControlDialog.operateGroupAndMember.allMembers": "모든 멤버들",
-  "accessControlDialog.operateGroupAndMember.expand": "확장하다",
+  "accessControlDialog.operateGroupAndMember.expand": "펼치기",
   "accessControlDialog.operateGroupAndMember.noResult": "결과 없음",
   "accessControlDialog.operateGroupAndMember.searchPlaceholder": "그룹 및 구성원 검색",
   "accessControlDialog.title": "웹 애플리케이션 접근 제어",
@@ -124,10 +124,10 @@
   "maxActiveRequests": "동시 최대 요청 수",
   "maxActiveRequestsPlaceholder": "무제한 사용을 원하시면 0을 입력하세요.",
   "maxActiveRequestsTip": "앱당 최대 동시 활성 요청 수(무제한은 0)",
-  "mermaid.classic": "고전",
-  "mermaid.handDrawn": "손으로 그린",
+  "mermaid.classic": "클래식",
+  "mermaid.handDrawn": "손그림",
   "newApp.Cancel": "취소",
-  "newApp.Confirm": "확인하다",
+  "newApp.Confirm": "확인",
   "newApp.Create": "만들기",
   "newApp.advancedShortDescription": "다중 대화를 위해 강화된 워크플로우",
   "newApp.advancedUserDescription": "메모리 기능과 챗봇 인터페이스를 갖춘 워크플로우",
@@ -164,7 +164,7 @@
   "newApp.foundResult": "{{count}} 결과",
   "newApp.foundResults": "{{count}} 결과",
   "newApp.hideTemplates": "모드 선택으로 돌아가기",
-  "newApp.import": "수입",
+  "newApp.import": "가져오기",
   "newApp.learnMore": "더 알아보세요",
   "newApp.nameNotEmpty": "이름을 입력하세요",
   "newApp.noAppsFound": "앱을 찾을 수 없습니다.",
@@ -182,8 +182,8 @@
   "newApp.workflowWarning": "현재 베타 버전입니다",
   "newAppFromTemplate.byCategories": "카테고리별",
   "newAppFromTemplate.searchAllTemplate": "모든 템플릿 검색...",
-  "newAppFromTemplate.sidebar.Agent": "대리인",
-  "newAppFromTemplate.sidebar.Assistant": "조수",
+  "newAppFromTemplate.sidebar.Agent": "에이전트",
+  "newAppFromTemplate.sidebar.Assistant": "어시스턴트",
   "newAppFromTemplate.sidebar.HR": "인사",
   "newAppFromTemplate.sidebar.Programming": "프로그래밍",
   "newAppFromTemplate.sidebar.Recommended": "권장",
@@ -200,7 +200,7 @@
   "roadmap": "로드맵 보기",
   "showMyCreatedAppsOnly": "내가 만든 앱만 보기",
   "structOutput.LLMResponse": "LLM 응답",
-  "structOutput.configure": "설정하다",
+  "structOutput.configure": "설정",
   "structOutput.modelNotSupported": "모델이 지원되지 않습니다.",
   "structOutput.modelNotSupportedTip": "현재 모델은 이 기능을 지원하지 않으며 자동으로 프롬프트 주입으로 다운그레이드됩니다.",
   "structOutput.moreFillTip": "최대 10 단계 중첩을 표시합니다.",
@@ -266,18 +266,18 @@
   "tracing.tracingDescription": "LLM 호출, 컨텍스트, 프롬프트, HTTP 요청 등 앱 실행의 전체 컨텍스트를 제 3 자 추적 플랫폼에 캡처합니다.",
   "tracing.view": "보기",
   "tracing.weave.description": "Weave 는 LLM 애플리케이션을 평가하고 테스트하며 모니터링하기 위한 오픈 소스 플랫폼입니다.",
-  "tracing.weave.title": "직조하다",
+  "tracing.weave.title": "Weave",
   "typeSelector.advanced": "채팅 플로우",
   "typeSelector.agent": "에이전트",
   "typeSelector.all": "모든 종류",
   "typeSelector.chatbot": "챗봇",
-  "typeSelector.completion": "완성",
+  "typeSelector.completion": "완료",
   "typeSelector.workflow": "워크플로우",
   "types.advanced": "채팅 플로우",
   "types.agent": "에이전트",
   "types.all": "모두",
-  "types.basic": "기초의",
+  "types.basic": "기본",
   "types.chatbot": "챗봇",
-  "types.completion": "완성",
+  "types.completion": "완료",
   "types.workflow": "워크플로우"
 }
