--- a/web/i18n/ko-KR/billing.json
+++ b/web/i18n/ko-KR/billing.json
@@ -179,7 +179,7 @@
   "vectorSpace.fullSolution": "더 많은 공간을 얻으려면 요금제를 업그레이드하세요.",
   "vectorSpace.fullTip": "벡터 공간이 가득 찼습니다.",
   "viewBilling": "청구 및 구독 관리",
-  "viewBillingAction": "관리하다",
+  "viewBillingAction": "관리",
   "viewBillingDescription": "결제 수단, 청구서 및 구독 변경 관리",
   "viewBillingTitle": "청구 및 구독"
 }
