--- a/web/i18n/ko-KR/common.json
+++ b/web/i18n/ko-KR/common.json
@@ -13,7 +13,7 @@
   "account.changeEmail.content2": "현재 이메일은 <email>{{email}}</email>입니다. 이 이메일 주소로 인증 코드가 전송되었습니다.",
   "account.changeEmail.content3": "새로운 이메일을 입력하시면 인증 코드를 보내드립니다.",
   "account.changeEmail.content4": "우리는 방금 귀하에게 임시 인증 코드를 <email>{{email}}</email>로 보냈습니다.",
-  "account.changeEmail.continue": "계속하다",
+  "account.changeEmail.continue": "계속하기",
   "account.changeEmail.emailLabel": "새 이메일",
   "account.changeEmail.emailPlaceholder": "새 이메일을 입력하세요",
   "account.changeEmail.existingEmail": "이미 이 이메일을 가진 사용자가 존재합니다.",
@@ -21,7 +21,7 @@
   "account.changeEmail.resend": "다시 보내기",
   "account.changeEmail.resendCount": "{{count}}초 후에 다시 보내기",
   "account.changeEmail.resendTip": "코드를 받지 못하셨나요?",
-  "account.changeEmail.sendVerifyCode": "인증 코드를 보내다",
+  "account.changeEmail.sendVerifyCode": "인증 코드 보내기",
   "account.changeEmail.title": "이메일 변경",
   "account.changeEmail.unAvailableEmail": "이 이메일은 일시적으로 사용할 수 없습니다.",
   "account.changeEmail.verifyEmail": "현재 이메일을 확인하세요",
@@ -175,7 +175,7 @@
   "fileUploader.uploadFromComputerLimit": "업로드 파일은 {{size}}를 초과할 수 없습니다.",
   "fileUploader.uploadFromComputerReadError": "파일 읽기에 실패했습니다. 다시 시도하십시오.",
   "fileUploader.uploadFromComputerUploadError": "파일 업로드에 실패했습니다. 다시 업로드하십시오.",
-  "imageInput.browse": "브라우즈",
+  "imageInput.browse": "찾아보기",
   "imageInput.dropImageHere": "여기에 이미지를 드롭하거나",
   "imageInput.supportedFormats": "PNG, JPG, JPEG, WEBP 및 GIF 를 지원합니다.",
   "imageUploader.imageUpload": "이미지 업로드",
@@ -201,7 +201,7 @@
   "loading": "로딩 중",
   "members.admin": "관리자",
   "members.adminTip": "앱 빌드 및 팀 설정 관리 가능",
-  "members.builder": "건설자",
+  "members.builder": "빌더",
   "members.builderTip": "자신의 앱을 구축 및 편집할 수 있습니다.",
   "members.datasetOperator": "지식 관리자",
   "members.datasetOperatorTip": "기술 자료만 관리할 수 있습니다.",
@@ -244,7 +244,7 @@
   "members.transferModal.resendCount": "{{count}}초 후에 다시 보내기",
   "members.transferModal.resendTip": "코드를 받지 못하셨나요?",
   "members.transferModal.sendTip": "계속 진행하면, 재인증을 위해 <email>{{email}}</email>로 인증 코드를 전송하겠습니다.",
-  "members.transferModal.sendVerifyCode": "인증 코드를 보내다",
+  "members.transferModal.sendVerifyCode": "인증 코드 보내기",
   "members.transferModal.title": "작업 공간 소유권 이전",
   "members.transferModal.transfer": "작업 공간 소유권 이전",
   "members.transferModal.transferLabel": "작업 공간 소유권을 이전하다",
@@ -308,7 +308,7 @@
   "modelProvider.apiKeyRateLimit": "속도 제한에 도달했으며, {{seconds}}s 후에 사용할 수 있습니다.",
   "modelProvider.apiKeyStatusNormal": "APIKey 상태는 정상입니다.",
   "modelProvider.auth.addApiKey": "API 키 추가",
-  "modelProvider.auth.addCredential": "자격 증명을 추가하다",
+  "modelProvider.auth.addCredential": "자격 증명 추가",
   "modelProvider.auth.addModel": "모델 추가",
   "modelProvider.auth.addModelCredential": "모델 자격 증명 추가",
   "modelProvider.auth.addNewModel": "새 모델 추가하기",
@@ -372,7 +372,7 @@
   "modelProvider.invalidApiKey": "잘못된 API 키",
   "modelProvider.item.deleteDesc": "{{modelName}}은 (는) 시스템 추론 모델로 사용 중입니다. 제거 후 일부 기능을 사용할 수 없습니다. 확인하시겠습니까?",
   "modelProvider.item.freeQuota": "무료 할당량",
-  "modelProvider.loadBalancing": "부하 분산 Load balancing",
+  "modelProvider.loadBalancing": "부하 분산 (Load balancing)",
   "modelProvider.loadBalancingDescription": "여러 자격 증명 세트로 부담을 줄입니다.",
   "modelProvider.loadBalancingHeadline": "로드 밸런싱",
   "modelProvider.loadBalancingInfo": "기본적으로 부하 분산은 라운드 로빈 전략을 사용합니다. 속도 제한이 트리거되면 1 분의 휴지 기간이 적용됩니다.",
@@ -422,7 +422,7 @@
   "operation.cancel": "취소",
   "operation.change": "변경",
   "operation.clear": "지우기",
-  "operation.close": "닫다",
+  "operation.close": "닫기",
   "operation.config": "구성",
   "operation.confirm": "확인",
   "operation.confirmAction": "귀하의 행동을 확인해 주세요.",
@@ -473,9 +473,9 @@
   "operation.send": "전송",
   "operation.settings": "설정",
   "operation.setup": "설정",
-  "operation.skip": "배",
+  "operation.skip": "건너뛰기",
   "operation.submit": "전송",
-  "operation.sure": "확실히",
+  "operation.sure": "확인",
   "operation.view": "보기",
   "operation.viewDetails": "세부 정보보기",
   "operation.viewMore": "더보기",
@@ -618,5 +618,5 @@
   "voiceInput.converting": "텍스트로 변환 중...",
   "voiceInput.notAllow": "마이크가 허용되지 않았습니다",
   "voiceInput.speaking": "지금 말하고 있습니다...",
-  "you": "너"
+  "you": "나"
 }
