--- a/web/i18n/ko-KR/dataset-creation.json
+++ b/web/i18n/ko-KR/dataset-creation.json
@@ -61,13 +61,13 @@
   "stepOne.website.jinaReaderNotConfiguredDescription": "액세스를 위해 무료 API 키를 입력하여 Jina Reader 를 설정합니다.",
   "stepOne.website.jinaReaderTitle": "전체 사이트를 Markdown 으로 변환",
   "stepOne.website.limit": "한계",
-  "stepOne.website.maxDepth": "최대 수심",
+  "stepOne.website.maxDepth": "최대 깊이",
   "stepOne.website.maxDepthTooltip": "입력한 URL 을 기준으로 크롤링할 최대 수준입니다. 깊이 0 은 입력 된 url 의 페이지를 긁어 내고, 깊이 1 은 url 과 enteredURL + one / 이후의 모든 것을 긁어 모으는 식입니다.",
   "stepOne.website.options": "옵션",
   "stepOne.website.preview": "미리 보기",
   "stepOne.website.resetAll": "모두 재설정",
-  "stepOne.website.run": "달리다",
-  "stepOne.website.running": "달리기",
+  "stepOne.website.run": "실행",
+  "stepOne.website.running": "실행 중",
   "stepOne.website.scrapTimeInfo": "{{time}}s 내에 총 {{total}} 페이지를 스크랩했습니다.",
   "stepOne.website.selectAll": "모두 선택",
   "stepOne.website.totalPageScraped": "스크랩한 총 페이지 수:",
