--- a/web/i18n/ko-KR/dataset-documents.json
+++ b/web/i18n/ko-KR/dataset-documents.json
@@ -1,6 +1,6 @@
 {
   "embedding.automatic": "자동",
-  "embedding.childMaxTokens": "아이",
+  "embedding.childMaxTokens": "자식",
   "embedding.completed": "임베딩이 완료되었습니다",
   "embedding.custom": "사용자 정의",
   "embedding.docName": "문서 전처리",
@@ -286,10 +286,10 @@
   "segment.childChunkAdded": "자식 청크 1 개 추가됨",
   "segment.childChunks_one": "자식 청크 (CHILD CHUNK)",
   "segment.childChunks_other": "자식 청크",
-  "segment.chunk": "덩어리",
+  "segment.chunk": "청크",
   "segment.chunkAdded": "청크 1 개 추가됨",
   "segment.chunkDetail": "청크 디테일 (Chunk Detail)",
-  "segment.chunks_one": "덩어리",
+  "segment.chunks_one": "청크",
   "segment.chunks_other": "청크",
   "segment.clearFilter": "필터 지우기",
   "segment.collapseChunks": "청크 축소",
