--- a/web/i18n/ko-KR/dataset.json
+++ b/web/i18n/ko-KR/dataset.json
@@ -5,7 +5,7 @@
   "appCount": " 연결된 앱",
   "batchAction.archive": "보관",
   "batchAction.cancel": "취소",
-  "batchAction.delete": "삭제하다",
+  "batchAction.delete": "삭제",
   "batchAction.disable": "비활성화",
   "batchAction.enable": "사용",
   "batchAction.reIndex": "재색인",
@@ -44,7 +44,7 @@
   "deleteExternalAPIConfirmWarningContent.content.front": "이 외부 지식 API 는 다음에 연결됩니다.",
   "deleteExternalAPIConfirmWarningContent.noConnectionContent": "이 API 를 삭제하시겠습니까?",
   "deleteExternalAPIConfirmWarningContent.title.end": "?",
-  "deleteExternalAPIConfirmWarningContent.title.front": "삭제하다",
+  "deleteExternalAPIConfirmWarningContent.title.front": "삭제",
   "didYouKnow": "알고 계셨나요?",
   "docAllEnabled_one": "{{count}} 문서 활성화됨",
   "docAllEnabled_other": "모든 {{count}} 문서 사용 가능",
@@ -62,12 +62,12 @@
   "externalAPI": "외부 API",
   "externalAPIForm.apiKey": "API 키",
   "externalAPIForm.cancel": "취소",
-  "externalAPIForm.edit": "편집하다",
+  "externalAPIForm.edit": "편집",
   "externalAPIForm.encrypted.end": "기술.",
   "externalAPIForm.encrypted.front": "API 토큰은 다음을 사용하여 암호화되고 저장됩니다.",
   "externalAPIForm.endpoint": "API 엔드포인트",
   "externalAPIForm.name": "이름",
-  "externalAPIForm.save": "구해내다",
+  "externalAPIForm.save": "저장",
   "externalAPIPanelDescription": "외부 지식 API 는 Dify 외부의 기술 자료에 연결하고 해당 기술 자료에서 지식을 검색하는 데 사용됩니다.",
   "externalAPIPanelDocumentation": "외부 지식 API 를 만드는 방법 알아보기",
   "externalAPIPanelTitle": "외부 지식 API",
@@ -75,7 +75,7 @@
   "externalKnowledgeDescription": "지식 설명",
   "externalKnowledgeDescriptionPlaceholder": "이 기술 자료의 내용 설명 (선택 사항)",
   "externalKnowledgeForm.cancel": "취소",
-  "externalKnowledgeForm.connect": "연결하다",
+  "externalKnowledgeForm.connect": "연결",
   "externalKnowledgeId": "외부 지식 ID",
   "externalKnowledgeIdPlaceholder": "지식 ID 를 입력하십시오.",
   "externalKnowledgeName": "외부 지식 이름",
@@ -133,7 +133,7 @@
   "metadata.documentMetadata.startLabeling": "레이블링 시작",
   "metadata.documentMetadata.technicalParameters": "기술 매개변수",
   "metadata.metadata": "메타데이터",
-  "metadata.selectMetadata.manageAction": "관리하다",
+  "metadata.selectMetadata.manageAction": "관리",
   "metadata.selectMetadata.newAction": "새 메타데이터",
   "metadata.selectMetadata.search": "메타데이터 검색",
   "mixtureHighQualityAndEconomicTip": "고품질과 경제적 지식 베이스의 혼합을 위해서는 재순위 모델이 필요합니다.",
@@ -169,7 +169,7 @@
   "serviceApi.card.apiReference": "API 참고",
   "serviceApi.card.endpoint": "서비스 API 엔드포인트",
   "serviceApi.card.title": "백엔드 서비스 API",
-  "serviceApi.disabled": "장애인",
+  "serviceApi.disabled": "비활성화됨",
   "serviceApi.enabled": "서비스 중",
   "serviceApi.title": "서비스 API",
   "unavailable": "사용 불가",
