--- a/web/i18n/ko-KR/login.json
+++ b/web/i18n/ko-KR/login.json
@@ -72,7 +72,7 @@
   "oneMoreStep": "마지막 단계",
   "or": "또는",
   "pageTitle": "시작하기 🎉",
-  "pageTitleForE": "이봐, 시작하자!",
+  "pageTitleForE": "시작해 봅시다!",
   "password": "비밀번호",
   "passwordChanged": "지금 로그인",
   "passwordChangedTip": "비밀번호가 성공적으로 변경되었습니다",
