--- a/web/i18n/ko-KR/plugin.json
+++ b/web/i18n/ko-KR/plugin.json
@@ -48,7 +48,7 @@
   "autoUpdate.pluginDowngradeWarning.title": "플러그인 다운그레이드",
   "autoUpdate.specifyPluginsToUpdate": "업데이트할 플러그인을 지정하십시오.",
   "autoUpdate.strategy.disabled.description": "플러그인이 자동으로 업데이트되지 않습니다.",
-  "autoUpdate.strategy.disabled.name": "장애인",
+  "autoUpdate.strategy.disabled.name": "비활성화",
   "autoUpdate.strategy.fixOnly.description": "패치 버전만 자동 업데이트 (예: 1.0.1 → 1.0.2). 마이너 버전 변경은 업데이트를 유발하지 않습니다.",
   "autoUpdate.strategy.fixOnly.name": "수정만 하기",
   "autoUpdate.strategy.fixOnly.selectedDescription": "패치 버전만 자동 업데이트",
@@ -102,7 +102,7 @@
   "detailPanel.endpointDisableTip": "엔드포인트 비활성화",
   "detailPanel.endpointModalDesc": "구성이 완료되면 API 엔드포인트를 통해 플러그인에서 제공하는 기능을 사용할 수 있습니다.",
   "detailPanel.endpointModalTitle": "엔드포인트 설정",
-  "detailPanel.endpoints": "끝점",
+  "detailPanel.endpoints": "엔드포인트",
   "detailPanel.endpointsDocLink": "문서 보기",
   "detailPanel.endpointsEmpty": "'+' 버튼을 클릭하여 엔드포인트를 추가합니다.",
   "detailPanel.endpointsTip": "이 플러그인은 엔드포인트를 통해 특정 기능을 제공하며 현재 작업 공간에 대해 여러 엔드포인트 세트를 구성할 수 있습니다.",
@@ -146,7 +146,7 @@
   "from": "보낸 사람",
   "fromMarketplace": "Marketplace 에서",
   "install": "{{num}} 설치",
-  "installAction": "설치하다",
+  "installAction": "설치",
   "installFrom": "에서 설치",
   "installFromGitHub.gitHubRepo": "GitHub 리포지토리",
   "installFromGitHub.installFailed": "설치 실패",
@@ -161,10 +161,10 @@
   "installFromGitHub.uploadFailed": "업로드 실패",
   "installModal.back": "뒤로",
   "installModal.cancel": "취소",
-  "installModal.close": "닫다",
+  "installModal.close": "닫기",
   "installModal.dropPluginToInstall": "플러그인 패키지를 여기에 놓아 설치하십시오.",
   "installModal.fromTrustSource": "<trustSource>신뢰할 수 있는 출처</trustSource>의 플러그인만 설치하도록 하세요.",
-  "installModal.install": "설치하다",
+  "installModal.install": "설치",
   "installModal.installComplete": "설치 완료",
   "installModal.installFailed": "설치 실패",
   "installModal.installFailedDesc": "플러그인이 설치되지 않았습니다.",
@@ -207,7 +207,7 @@
   "marketplace.viewMore": "더보기",
   "metadata.title": "플러그인",
   "pluginInfoModal.packageName": "패키지",
-  "pluginInfoModal.release": "석방",
+  "pluginInfoModal.release": "릴리스",
   "pluginInfoModal.repository": "저장소",
   "pluginInfoModal.title": "플러그인 정보",
   "privilege.admins": "관리자",
@@ -241,11 +241,11 @@
   "task.installingWithSuccess": "{{installingLength}} 플러그인 설치, {{successLength}} 성공.",
   "task.runningPlugins": "Installing Plugins",
   "task.successPlugins": "Successfully Installed Plugins",
-  "upgrade.close": "닫다",
+  "upgrade.close": "닫기",
   "upgrade.description": "다음 플러그인을 설치하려고 합니다.",
   "upgrade.successfulTitle": "설치 성공",
   "upgrade.title": "플러그인 설치",
-  "upgrade.upgrade": "설치하다",
+  "upgrade.upgrade": "업그레이드",
   "upgrade.upgrading": "설치...",
   "upgrade.usedInApps": "{{num}}개의 앱에서 사용됨"
 }
