--- a/web/i18n/ko-KR/dataset-pipeline.json
+++ b/web/i18n/ko-KR/dataset-pipeline.json
@@ -66,12 +66,12 @@
   "onlineDrive.notSupportedFileType": "이 파일 형식은 지원되지 않습니다",
   "onlineDrive.resetKeywords": "키워드 재설정",
   "operations.backToDataSource": "데이터 소스로 돌아가기",
-  "operations.choose": "고르다",
+  "operations.choose": "선택",
   "operations.convert": "변환",
   "operations.dataSource": "데이터 소스",
   "operations.details": "세부 정보",
   "operations.editInfo": "정보 편집",
-  "operations.exportPipeline": "수출 파이프라인",
+  "operations.exportPipeline": "파이프라인 내보내기",
   "operations.preview": "미리 보기",
   "operations.process": "프로세스",
   "operations.saveAndProcess": "저장 및 처리",
