--- a/web/i18n/ko-KR/workflow.json
+++ b/web/i18n/ko-KR/workflow.json
@@ -1,5 +1,5 @@
 {
-  "blocks.agent": "대리인",
+  "blocks.agent": "에이전트",
   "blocks.answer": "답변",
   "blocks.assigner": "변수 할당자",
   "blocks.code": "코드",
@@ -127,7 +127,7 @@
   "common.currentView": "현재 보기",
   "common.currentWorkflow": "현재 워크플로",
   "common.debugAndPreview": "미리보기",
-  "common.disconnect": "분리하다",
+  "common.disconnect": "연결 해제",
   "common.duplicate": "복제",
   "common.editing": "편집 중",
   "common.effectVarConfirm.content": "변수가 다른 노드에서 사용되고 있습니다. 그래도 제거하시겠습니까?",
@@ -244,7 +244,7 @@
   "debug.variableInspect.emptyLink": "더 알아보기",
   "debug.variableInspect.emptyTip": "캔버스에서 노드를 한 단계씩 실행한 후, 변수 검사에서 노드 변수의 현재 값을 볼 수 있습니다.",
   "debug.variableInspect.envNode": "환경",
-  "debug.variableInspect.export": "수출",
+  "debug.variableInspect.export": "내보내기",
   "debug.variableInspect.exportToolTip": "변수를 파일로 내보내기",
   "debug.variableInspect.largeData": "대용량 데이터, 읽기 전용 미리 보기. 모두 보도록 내보내기.",
   "debug.variableInspect.largeDataNoExport": "대용량 데이터 - 부분 미리 보기만",
@@ -263,10 +263,10 @@
   "debug.variableInspect.systemNode": "시스템",
   "debug.variableInspect.title": "변수 검사",
   "debug.variableInspect.trigger.cached": "캐시된 변수를 보기",
-  "debug.variableInspect.trigger.clear": "맑은",
+  "debug.variableInspect.trigger.clear": "지우기",
   "debug.variableInspect.trigger.normal": "변수 검사",
   "debug.variableInspect.trigger.running": "캐싱 실행 상태",
-  "debug.variableInspect.trigger.stop": "멈춰 뛰어",
+  "debug.variableInspect.trigger.stop": "중지",
   "debug.variableInspect.view": "로그 보기",
   "difyTeam": "디파이 팀",
   "entryNodeStatus.disabled": "시작 • 비활성",
@@ -322,7 +322,7 @@
   "nodes.agent.installPlugin.cancel": "취소",
   "nodes.agent.installPlugin.changelog": "변경 로그",
   "nodes.agent.installPlugin.desc": "다음 플러그인을 설치하려고 합니다.",
-  "nodes.agent.installPlugin.install": "설치하다",
+  "nodes.agent.installPlugin.install": "설치",
   "nodes.agent.installPlugin.title": "플러그인 설치",
   "nodes.agent.learnMore": "더 알아보세요",
   "nodes.agent.linkToPlugin": "플러그인에 대한 링크",
@@ -347,7 +347,7 @@
   "nodes.agent.outputVars.text": "상담원이 생성한 콘텐츠",
   "nodes.agent.outputVars.usage": "모델 사용 정보",
   "nodes.agent.parameterSchema": "파라미터 스키마",
-  "nodes.agent.pluginInstaller.install": "설치하다",
+  "nodes.agent.pluginInstaller.install": "설치",
   "nodes.agent.pluginInstaller.installing": "설치",
   "nodes.agent.pluginNotFoundDesc": "이 플러그인은 GitHub 에서 설치됩니다. 플러그인으로 이동하여 다시 설치하십시오.",
   "nodes.agent.pluginNotInstalled": "이 플러그인은 설치되어 있지 않습니다.",
@@ -434,7 +434,7 @@
   "nodes.common.outputVars": "출력 변수",
   "nodes.common.pluginNotInstalled": "플러그인이 설치되지 않았습니다",
   "nodes.common.retry.maxRetries": "최대 재시도 횟수",
-  "nodes.common.retry.ms": "미에스",
+  "nodes.common.retry.ms": "ms",
   "nodes.common.retry.retries": "{{숫자}} 재시도",
   "nodes.common.retry.retry": "재시도",
   "nodes.common.retry.retryFailed": "재시도 실패",
@@ -536,7 +536,7 @@
   "nodes.ifElse.optionName.url": "URL (영문)",
   "nodes.ifElse.optionName.video": "비디오",
   "nodes.ifElse.or": "또는",
-  "nodes.ifElse.select": "고르다",
+  "nodes.ifElse.select": "선택",
   "nodes.ifElse.selectVariable": "변수 선택...",
   "nodes.iteration.ErrorMethod.continueOnError": "오류 발생 시 계속",
   "nodes.iteration.ErrorMethod.operationTerminated": "종료",
@@ -606,7 +606,7 @@
   "nodes.knowledgeRetrieval.queryAttachment": "이미지 조회",
   "nodes.knowledgeRetrieval.queryText": "질의 텍스트",
   "nodes.knowledgeRetrieval.queryVariable": "쿼리 변수",
-  "nodes.listFilter.asc": "증권 시세 표시기",
+  "nodes.listFilter.asc": "오름차순",
   "nodes.listFilter.desc": "설명",
   "nodes.listFilter.extractsCondition": "N 항목을 추출합니다.",
   "nodes.listFilter.filterCondition": "필터 조건",
@@ -626,12 +626,12 @@
   "nodes.llm.files": "파일",
   "nodes.llm.jsonSchema.addChildField": "자녀 필드 추가",
   "nodes.llm.jsonSchema.addField": "필드 추가",
-  "nodes.llm.jsonSchema.apply": "지원하다",
+  "nodes.llm.jsonSchema.apply": "적용",
   "nodes.llm.jsonSchema.back": "뒤",
   "nodes.llm.jsonSchema.descriptionPlaceholder": "설명을 추가하세요.",
   "nodes.llm.jsonSchema.doc": "구조화된 출력에 대해 더 알아보세요.",
   "nodes.llm.jsonSchema.fieldNamePlaceholder": "필드 이름",
-  "nodes.llm.jsonSchema.generate": "생성하다",
+  "nodes.llm.jsonSchema.generate": "생성",
   "nodes.llm.jsonSchema.generateJsonSchema": "JSON 스키마 생성",
   "nodes.llm.jsonSchema.generatedResult": "생성된 결과",
   "nodes.llm.jsonSchema.generating": "JSON 스키마 생성 중...",
@@ -640,7 +640,7 @@
   "nodes.llm.jsonSchema.instruction": "지침",
   "nodes.llm.jsonSchema.promptPlaceholder": "당신의 JSON 스키마를 설명하세요...",
   "nodes.llm.jsonSchema.promptTooltip": "텍스트 설명을 표준화된 JSON 스키마 구조로 변환하세요.",
-  "nodes.llm.jsonSchema.regenerate": "재생하다",
+  "nodes.llm.jsonSchema.regenerate": "재생성",
   "nodes.llm.jsonSchema.required": "필수",
   "nodes.llm.jsonSchema.resetDefaults": "재설정",
   "nodes.llm.jsonSchema.resultTip": "여기 생성된 결과가 있습니다. 만약 만족하지 않으신다면, 돌아가서 프롬프트를 수정할 수 있습니다.",
@@ -697,7 +697,7 @@
   "nodes.loop.totalLoopCount": "총 루프 횟수: {{count}}",
   "nodes.loop.variableName": "변수 이름",
   "nodes.note.addNote": "메모 추가",
-  "nodes.note.editor.bold": "대담한",
+  "nodes.note.editor.bold": "굵게",
   "nodes.note.editor.bulletList": "글머리 기호 목록",
   "nodes.note.editor.enterUrl": "URL 입력...",
   "nodes.note.editor.invalidUrl": "잘못된 URL",
@@ -708,7 +708,7 @@
   "nodes.note.editor.openLink": "열다",
   "nodes.note.editor.placeholder": "메모 쓰기...",
   "nodes.note.editor.showAuthor": "작성자 표시",
-  "nodes.note.editor.small": "작다",
+  "nodes.note.editor.small": "작게",
   "nodes.note.editor.strikethrough": "취소선",
   "nodes.note.editor.unlink": "해제",
   "nodes.parameterExtractor.addExtractParameter": "추출 매개변수 추가",
@@ -813,7 +813,7 @@
   "nodes.triggerPlugin.useOAuth": "OAuth 사용",
   "nodes.triggerPlugin.verifyAndContinue": "확인 후 계속",
   "nodes.triggerSchedule.cronExpression": "크론 표현식",
-  "nodes.triggerSchedule.days": "날들",
+  "nodes.triggerSchedule.days": "일",
   "nodes.triggerSchedule.executeNow": "지금 실행",
   "nodes.triggerSchedule.executionTime": "실행 시간",
   "nodes.triggerSchedule.executionTimeCalculationError": "실행 시간을 계산하지 못했습니다",
@@ -919,7 +919,7 @@
   "onboarding.description": "시작 노드마다 기능이 다릅니다. 걱정하지 마세요, 나중에 언제든지 변경할 수 있습니다.",
   "onboarding.escTip.key": "이스케이프",
   "onboarding.escTip.press": "누르다",
-  "onboarding.escTip.toDismiss": "해고하다",
+  "onboarding.escTip.toDismiss": "닫기",
   "onboarding.learnMore": "자세히 알아보기",
   "onboarding.title": "시작할 노드를 선택하세요",
   "onboarding.trigger": "트리거",
@@ -1041,7 +1041,7 @@
   "versionHistory.filter.all": "모든",
   "versionHistory.filter.empty": "일치하는 버전 기록이 없습니다.",
   "versionHistory.filter.onlyShowNamedVersions": "이름이 붙은 버전만 표시",
-  "versionHistory.filter.onlyYours": "오직 너의 것만",
+  "versionHistory.filter.onlyYours": "내 버전만",
   "versionHistory.filter.reset": "필터 재설정",
   "versionHistory.latest": "최신",
   "versionHistory.nameThisVersion": "이름 바꾸기",
