add missing translation

--- a/web/i18n/en-US/workflow.json
+++ b/web/i18n/en-US/workflow.json
@@ -7,6 +7,7 @@
   "blocks.datasource-empty": "Empty Data Source",
   "blocks.document-extractor": "Doc Extractor",
   "blocks.end": "Output",
+  "blocks.group": "Group",
   "blocks.http-request": "HTTP Request",
   "blocks.if-else": "IF/ELSE",
   "blocks.iteration": "Iteration",
@@ -37,6 +38,7 @@
   "blocksAbout.datasource-empty": "Empty Data Source placeholder",
   "blocksAbout.document-extractor": "Used to parse uploaded documents into text content that is easily understandable by LLM.",
   "blocksAbout.end": "Define the output and result type of a workflow",
+  "blocksAbout.group": "Group multiple nodes together for better organization",
   "blocksAbout.http-request": "Allow server requests to be sent over the HTTP protocol",
   "blocksAbout.if-else": "Allows you to split the workflow into two branches based on if/else conditions",
   "blocksAbout.iteration": "Perform multiple steps on a list object until all results are outputted.",
