archived button logic

--- a/web/i18n/en-US/app-log.json
+++ b/web/i18n/en-US/app-log.json
@@ -28,6 +28,12 @@
   "filter.annotation.all": "All",
   "filter.annotation.annotated": "Annotated Improvements ({{count}} items)",
   "filter.annotation.not_annotated": "Not Annotated",
+  "filter.archived.button": "View archived records",
+  "filter.archived.list.description": "This view will list archived workflow logs for export.",
+  "filter.archived.list.title": "Archived records",
+  "filter.archived.managerOnly": "Only workspace owner or admin can export logs.",
+  "filter.archived.upgrade.description": "Upgrade your plan to view archived records.",
+  "filter.archived.upgrade.title": "Upgrade required",
   "filter.ascending": "ascending",
   "filter.descending": "descending",
   "filter.period.allTime": "All time",
