--- a/web/i18n/en-US/app-log.json
+++ b/web/i18n/en-US/app-log.json
@@ -30,6 +30,7 @@
   "filter.annotation.not_annotated": "Not Annotated",
   "filter.archived.button": "View archived records",
   "filter.archived.export": "Export",
+  "filter.archived.exportFailed": "Export task failed. Please try again.",
   "filter.archived.list.description": "This view will list archived workflow logs for export.",
   "filter.archived.list.title": "Archived records",
   "filter.archived.managerOnly": "Only workspace owner or admin can export logs.",
