feat: export chat conversation logs

--- a/web/i18n/en-US/common.json
+++ b/web/i18n/en-US/common.json
@@ -439,6 +439,10 @@
   "operation.downloadSuccess": "Download Completed.",
   "operation.duplicate": "Duplicate",
   "operation.edit": "Edit",
+  "operation.export": "Export",
+  "operation.exportAll": "Export All",
+  "operation.exportFailed": "Export failed",
+  "operation.exportSuccess": "Export successful",
   "operation.format": "Format",
   "operation.getForFree": "Get for free",
   "operation.imageCopied": "Image copied",
